fix(grid): fix grid filter row double border

--- a/packages/default/scss/grid/_layout.scss
+++ b/packages/default/scss/grid/_layout.scss
@@ -587,6 +587,10 @@
             padding: $cell-padding-y;
         }
 
+        td:first-child {
+            border-left: 0px;
+        }
+
         .k-multiselect {
             height: auto;
         }
